replace `URL` with `GenericUrl`, use "com.google.http-client" instead of "org.apache.httpcomponents.client5.httpclient5-fluent"